reusable login with email and G_Oauth firebase

--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ PROJECT_ID= "lockin-613ef"
 STORAGE_BUCKET= "lockin-613ef.appspot.com"
 MESSAGING_SENDER_ID= "342816064197"
 APP_ID= "1:342816064197:web:4d9acd7675a19bc3d826ac"
+EAS_PROJECT_ID= "1e0740e7-840b-4969-ac7e-248ec1e70106"
+EXPO_CLIENT_ID= "342816064197-h0i0gvm1306trfu83vaona6mq4sjc38d.apps.googleusercontent.com"
+IOS_CLIENT_ID='YOUR_IOS_CLIENT_ID'
+ANDROID_CLIENT_ID='342816064197-jo2ei77um8lmna3bvmdnli7oqraniltf.apps.googleusercontent.com'
+WEB_CLIENT_ID='342816064197-h0i0gvm1306trfu83vaona6mq4sjc38d.apps.googleusercontent.com'
